wrap buttons' texts, partially fix #82

--- a/public/app/css/suivi.css
+++ b/public/app/css/suivi.css
@@ -1,6 +1,8 @@
 .btn,
 .panel { border-radius: 0; }
 
+.btn { white-space: normal; }
+
 #main-ui-view { position: absolute;
                 height: 100%;
                 width: 100%; }
@@ -14,12 +16,8 @@
 
 #main-ui-view .damier { padding: 0; }
 
-#main-ui-view .aside .go-back { height: 40px;
-                                margin-bottom: 20px;
-                                color: #eee;
-                                text-decoration: none;
-                                font-size: 24px;
-                                line-height: 1; }
+#main-ui-view .aside .go-back { color: #eee;
+                                text-decoration: none; }
 
 #main-ui-view .aside .user-details.eleve .avatar { background-color: #333;
                                                    margin-bottom: 20px;
